--- a/32_gateway_pedidos/src/main/resources/application.yml
+++ b/32_gateway_pedidos/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
           #2-Cuando se va a enrutar la peticion a un microservicio NO inscrito en Eureka, se coloca la URL real del microservicio al cual se quiere enrutar la peticion
         uri: lb://servicio-productos #http://localhost:8000/ = URL real del microservicio de pedidos al cual se enrutara la peticion de entrada
         predicates:
-          - Path=/sproductos/ #Cuando Gateway detecte que en la peticion URL venga este path, enrutara la peticion hacia el servicio indicado en la propiedad "uri" (lb://servicio-pedidos)
+          - Path=/sproductos/** #Cuando Gateway detecte que en la peticion URL venga este path, enrutara la peticion hacia el servicio indicado en la propiedad "uri" (lb://servicio-pedidos)
         filters:
           - RewritePath=/sproductos/, / #Lo que indica es que a la url indicada en la propiedad "uri", se le adicionará un "/" mas todo lo que venga despues de "spedidos" en la petición URL de entrada
       - id: servPedidos
